syntax = "proto3";

service CustomerService {
    rpc GetCustomers (Empty) returns (CustomerList) {}
    rpc NewCustomer (NewCustomer) returns (Customer) {}
    rpc UpdateCustomer (UpdateCustomer) returns (ResponseMessage) {}
    rpc GetCustomerById (CustomerId) returns (Customer) {}
    rpc DeleteCustomer (CustomerId) returns (ResponseMessage) {}
}

message Empty {}

message NewCustomer {
    string name = 1;
    string email = 2;
}

message UpdateCustomer {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message Customer {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerId {
    int32 id = 1;
}

message ResponseMessage {
    string message = 1;
}
